--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Header / Navbar -->
     <header id="header" class="fixed top-0 left-0 right-0 z-50 bg-black bg-opacity-50 backdrop-blur-md shadow-lg">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-white tracking-wider">BAROS DESIGN</a>
+            <a href="#home" class="text-2xl font-bold text-white tracking-wider">New Production</a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="text-gray-300 hover:text-white">Home</a>
                 <a href="#catalog" class="text-gray-300 hover:text-white">Katalog</a>
@@ -95,8 +95,8 @@
         <!-- Hero Section -->
         <section id="home" class="hero-section h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://images.unsplash.com/photo-1483985988355-763728e1935b?q=80&w=2070&auto=format&fit=crop');">
             <div class="bg-black bg-opacity-60 p-8 md:p-12 rounded-lg">
-                <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight uppercase">BAROS DESIGN</h1>
-                <p class="mt-4 text-lg md:text-2xl font-light text-gray-300">TEMUKAN GAYA ANDA BERSAMA KAMI</p>
+                <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight uppercase">Z shop</h1>
+                <p class="mt-4 text-lg md:text-2xl font-light text-gray-300">FIND YOUR STYLE WITH US</p>
                 <a href="#catalog" class="mt-8 inline-block bg-white text-black px-8 py-3 font-semibold rounded-md hover:bg-gray-200">
                     Belanja Sekarang
                 </a>
@@ -111,53 +111,66 @@
                     <!-- Product Card 1 -->
                     <div class="product-card bg-gray-800 rounded-lg overflow-hidden shadow-lg group text-left">
                         <div class="relative">
-                            <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?q=80&w=1887&auto=format&fit=crop" alt="Produk 1" class="w-full h-80 object-cover transform transition-transform duration-500">
+                            <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?q=80&w=1887&auto=format&fit=crop" alt="Kaos Putih" class="w-full h-80 object-cover transform transition-transform duration-500">
                             <div class="absolute bottom-0 left-0 right-0 p-4">
                                 <button class="add-to-cart-btn w-full bg-white text-black py-2 font-bold rounded-md">Tambah ke Keranjang</button>
                             </div>
                         </div>
                         <div class="p-4">
                             <h3 class="text-lg font-semibold text-white">Kaos Putih</h3>
-                            <p class="text-gray-400 mt-1">Rp 150.000</p>
+                            <p class="text-gray-400 mt-1">Rp 75.000</p>
                         </div>
                     </div>
                     <!-- Product Card 2 -->
                     <div class="product-card bg-gray-800 rounded-lg overflow-hidden shadow-lg group text-left">
                         <div class="relative">
-                            <img src="bajualucard.jpg" alt="Produk 2" class="w-full h-80 object-cover transform transition-transform duration-500">
+                            <img src="bajualucard.jpg" alt="Baju king Alucard" class="w-full h-80 object-cover transform transition-transform duration-500">
                              <div class="absolute bottom-0 left-0 right-0 p-4">
                                 <button class="add-to-cart-btn w-full bg-white text-black py-2 font-bold rounded-md">Tambah ke Keranjang</button>
                             </div>
                         </div>
                         <div class="p-4">
                             <h3 class="text-lg font-semibold text-white">Baju king Alucard</h3>
-                            <p class="text-gray-400 mt-1">Rp 350.000</p>
+                            <p class="text-gray-400 mt-1">Rp 100.000</p>
                         </div>
                     </div>
                     <!-- Product Card 3 -->
                     <div class="product-card bg-gray-800 rounded-lg overflow-hidden shadow-lg group text-left">
                         <div class="relative">
-                            <img src="kaoshitam.jpg" alt="Produk 3" class="w-full h-80 object-cover transform transition-transform duration-500">
+                            <img src="kaoshitam.jpg" alt="Kaos hitam Polos" class="w-full h-80 object-cover transform transition-transform duration-500">
                              <div class="absolute bottom-0 left-0 right-0 p-4">
                                 <button class="add-to-cart-btn w-full bg-white text-black py-2 font-bold rounded-md">Tambah ke Keranjang</button>
                             </div>
                         </div>
                         <div class="p-4">
                             <h3 class="text-lg font-semibold text-white">Kaos hitam Polos</h3>
-                            <p class="text-gray-400 mt-1">Rp 400.000</p>
+                            <p class="text-gray-400 mt-1">Rp 75.000</p>
                         </div>
                     </div>
                     <!-- Product Card 4 -->
                     <div class="product-card bg-gray-800 rounded-lg overflow-hidden shadow-lg group text-left">
                         <div class="relative">
-                            <img src="bajualok.jpg" alt="Produk 4" class="w-full h-80 object-cover transform transition-transform duration-500">
+                            <img src="bajualok.jpg" alt="Alok rare" class="w-full h-80 object-cover transform transition-transform duration-500">
                              <div class="absolute bottom-0 left-0 right-0 p-4">
                                 <button class="add-to-cart-btn w-full bg-white text-black py-2 font-bold rounded-md">Tambah ke Keranjang</button>
                             </div>
                         </div>
                         <div class="p-4">
                             <h3 class="text-lg font-semibold text-white">Kaos Alok RARE</h3>
-                            <p class="text-gray-400 mt-1">Rp 250.000</p>
+                            <p class="text-gray-400 mt-1">Rp 300.000</p>
+                        </div>
+                    </div>
+                    <!-- Product Card 5 -->
+                     <div class="product-card bg-gray-800 rounded-lg overflow-hidden shadow-lg group text-left">
+                        <div class="relative">
+                            <img src="bajuonic.jpg" alt="Kaos onic" class="w-full h-80 object-cover transform transition-transform duration-500">
+                             <div class="absolute bottom-0 left-0 right-0 p-4">
+                                <button class="add-to-cart-btn w-full bg-white text-black py-2 font-bold rounded-md">Tambah ke Keranjang</button>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h3 class="text-lg font-semibold text-white">T-shirt onic</h3>
+                            <p class="text-gray-400 mt-1">Rp 200.000</p>
                         </div>
                     </div>
                 </div>
@@ -170,10 +183,10 @@
                 <h2 class="section-title text-4xl font-bold mb-4 inline-block">Hubungi Kami</h2>
                 <p class="text-gray-400 mb-8 max-w-2xl mx-auto">Ikuti kami di media sosial untuk mendapatkan update terbaru seputar produk dan promo menarik.</p>
                 <div class="flex justify-center items-center space-x-6">
-                    <a href="#" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/share/16qPDLdbPz/" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/afwannim/profilecard/?igsh=MTIxcGoydG9xZHN1MA==" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-instagram"></i></a>
+                    <a href="https://wa.me/qr/MBNLRL564XSBC1" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.tiktok.com/@muhammadafwan452?_t=ZS-8yo7GSmFZnU&_r=1" class="text-gray-400 hover:text-white text-3xl"><i class="fab fa-tiktok"></i></a>
                     <a href="mailto:kontak@barosdesign.com" class="text-gray-400 hover:text-white text-3xl"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
